...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/exo_PV"
            />

        <TextView
            android:id="@+id/step_description_TV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:layout_margin="8dp"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
...
